[package]
name = "batchloader"
version = "0.1.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-timer = "3.0.1"

[dev-dependencies]
futures = "0.3.4"
crossbeam = "0.7.3"
cooked-waker = "1.0.2"