[package]
name = "batchloader"
version = "0.5.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MPL-2.0"
description = "A type-safe async request batcher based on facebook's dataloader"
repository = "https://github.com/Lucretiel/batchloader"

[badges]
maintenance = { status = "actively-developed" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
futures = "0.3.4"
crossbeam = "0.7.3"
cooked-waker = "1.0.2"
futures-timer = "3.0.2"